--- a/KGERP/Views/Consumption/ConsumptionMasterSlave.cshtml
+++ b/KGERP/Views/Consumption/ConsumptionMasterSlave.cshtml
@@ -190,7 +190,7 @@
                             <div class="col-md-3 d-block" id="inputReceivedSoFar">
                                 <div class="form-group">
                                     <label>Unit Price </label>
-                                    @Html.TextBoxFor(model => model.DetailModel.UnitPrice, new { id = "decReceivedSoFar", type = "number", step = "0.01", @class = "form-control", placeholder = "Received so far", ReadOnly = "true" })
+                                    @Html.TextBoxFor(model => model.DetailModel.UnitPrice, new { id = "decUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Received so far", ReadOnly = "true" })
                                     @Html.ValidationMessageFor(model => model.DetailModel.UnitPrice, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -214,7 +214,7 @@
                             <div class="col-md-3 d-block" id="inputUnitRate">
                                 <div class="form-group">
                                     <label id="unitTitle">Consumption Quantity</label>
-                                    @Html.TextBoxFor(model => model.DetailModel.ConsumedQty, new { id = "decUnitRate", type = "number", step = "0.01", @class = "form-control", placeholder = "Unit rate", })
+                                    @Html.TextBoxFor(model => model.DetailModel.ConsumedQty, new { id = "decConsumptionQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Consumption Quantity", })
                                     @Html.ValidationMessageFor(model => model.DetailModel.ConsumedQty, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -627,9 +627,9 @@
                 success: function (data) {
                     showBoqMaterialList.empty();
                     showBoqMaterialList.append("<option selected disabled>==Select Material==</option>");
-                    console.log(data);
+                   
                     $.each(data, function (index, item) {
-                        console.log(item);
+                        
 
                         showBoqMaterialList.append($('<option>', {
                             value: item.Value,
@@ -771,6 +771,35 @@
             }
         }
 
+
+        $("#ddlRequisitionItemId").on('change', function () {
+            var productId = $(this).val();
+            var boqItemId = $("#ddlBOQItemId").val();
+            $.ajax({
+                type: "GET",
+                url: "/MaterialReceive/GetMaterialReceiveLByProductId",
+                dataType: "json",
+                data: { BoqItem: boqItemId, ProductId: productId },
+                success: function (data) {
+
+                    $("#decEstimatedQty").val(data.StoredQty);
+                    $("#decRemainingQty").val(data.RemainQuentity);
+                    $("#decTotalPrice").val(data.TotalAmount);
+                    $("#decUnitPrice").val(data.UnitPrice);
+                    $("#decConsumptionQty").val();
+                }
+            });
+        });
+
+        $("#decConsumptionQty").on('keyup', function () {
+            var remainQty = parseFloat($("#decRemainingQty").val());
+            var consQty = parseFloat($(this).val());
+            if (consQty > remainQty) {
+                $("#sosoCreateBtnCreateBtn").prop('disabled', true);
+            } else {
+                $("#sosoCreateBtnCreateBtn").prop('disabled', false);
+            }
+        });
         //function CreateConsumption()
         //{
         //    alert('ok');
