--- a/KGERP/Views/BillRequisition/CommonUnit.cshtml
+++ b/KGERP/Views/BillRequisition/CommonUnit.cshtml
@@ -40,7 +40,7 @@
                             @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
 
                             <div class="form-group">
-                                <label>BoQ Unit Name :</label>
+                                <label>BoQ Unit Name<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                 @Html.TextBoxFor(model => model.Name, new { id = "txtUnitName", @class = "form-control input-sm", @placeholder = "BoQ Unit Name", required = "true", })
                                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                             </div>
@@ -50,9 +50,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-edit'></i> Add</button>
-
                                 </div>
-
                             </div>
                         </div>
                         <div class="box-footer">
